--- a/jenkinsfile
+++ b/jenkinsfile
@@ -11,7 +11,7 @@ pipeline {
     stages {
         stage ("checkout from GIT") {
             steps {
-                git branch: 'main', url: 'https://github.com/bhaskar3410/jenkins_infra_pipeline.git/'
+                git branch: 'develop', url: 'https://github.com/bhaskar3410/jenkins_infra_pipeline.git/'
                
             }
         }
