--- a/jenkinsfile
+++ b/jenkinsfile
@@ -16,27 +16,40 @@ pipeline {
         }
         stage ("terraform init") {
             steps {
-                sh 'terraform init'
+                script {
+                    sh 'terraform init'
+                }
+                
             }
         }
         stage ("terraform fmt") {
             steps {
-                sh 'terraform fmt'
+                script{
+                    sh 'terraform fmt'
+                }
+                
             }
         }
         stage ("terraform validate") {
             steps {
-                sh 'terraform validate'
+                script{
+                    sh 'terraform validate'
+                }
+                
             }
         }
         stage ("terrafrom plan") {
             steps {
-                sh 'terraform plan '
+                script{
+                    sh 'terraform plan '
+                }
             }
         }
         stage ("terraform apply") {
             steps {
-                sh 'terraform apply --auto-approve'
+                script{
+                    sh 'terraform apply --auto-approve'
+                }
             }
         }
      }
